--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -3,6 +3,7 @@
   max-width: 498px;
   background-color: white;
   border-radius: 20px;
+  position: relative;
   overflow: hidden;
 }
 
